# data_platform_ai_course

./: .gitignore  README.md  pyproject.toml
code-along/: pydantic_gemini_intro.ipynb  pydantic_intro.ipynb
code-along/06_fast_api_crud/: api.py  data_processing.py
exercises/: exercise_0_0.ipynb  exercise_0_1.ipynb
exercises/exercise_0/: company.db  employee_dump_directly.json  exercise_0_0.ipynb  exercise_0_1.ipynb  exercise_0_2.ipynb  exercise_0_3.ipynb  exercise_0_4.ipynb
exercises/exercise_0/assets/: ads4.txt  criteria.txt  employees.csv
exercises/exercise_0/exports/: ads_desc2.md
exercises/exports/: ads_desc.md  summarize3.md  summarize4.md  summarize_d.md
exploration/: exercise_0_1.ipynb
video_lecture/: 03_gemini_intro.ipynb
video_lecture/04_pydantic_gemini/: person.json  pydantic_api.ipynb  pydantic_fundamentals.ipynb
video_lecture/05_gemini_pydantic/: cheap_house.csv  gemini_pydantic.ipynb  library.json  robust_gemini_pydantic.ipynb
video_lecture/06_fast_api/: api.py  constants.py  data_processing.py
video_lecture/06_fast_api/data/: library.json
video_lecture/07_pydantic_ai/: cv.duckdb  pydantic_ai_pydantic_model.ipynb
video_lecture/07_pydantic_ai/src/: data_models.py  movies_api.py  setup_db.py  utils.py
video_lecture/08_pydanticai_chatbot/: chat.py  chat_eda.ipynb  frontend.py
video_lecture/09_vector_db_intro/: lancedb_basics.ipynb
video_lecture/09_vector_db_intro/data/: animals_text_embeddings.json  jokes.json
video_lecture/10_pydanticai_RAG/: api.py  explorations.ipynb  ingestion.py  pdfs_to_text.py
(+25 files in other folders)
