[project]
name = "data-platform-ai-course"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "duckdb>=1.4.2",
    "email-validator>=2.3.0",
    "fastapi>=0.122.0",
    "google>=3.0.0",
    "google-genai>=1.50.1",
    "google-generativeai>=0.8.5",
    "ipykernel>=7.1.0",
    "matplotlib>=3.10.7",
    "pandas>=2.3.3",
    "pydantic-ai>=1.23.0",
    "pydantic>=2.12.4",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "uvicorn>=0.38.0",
    "dlt>=1.18.2",
]
